[workspace]
members = ["packages/*", "contracts/*"]

[workspace.package]
version       = "1.0.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/CosmWasm/cw-nfts"
homepage      = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[workspace.dependencies]
cosmwasm-schema = "1.1.5"
cosmwasm-std    = "1.1.5"
cw2             = { version = "1.0.0", path = "./packages/cw2" }
cw20            = { version = "1.0.0", path = "./packages/cw20" }
cw721           = { version = "1.0.0", path = "./packages/cw721" }
cw1155          = { version = "1.0.0", path = "./packages/cw1155" }

cw20-base      = { version = "1.0.0", path = "./contracts/cw20-base" }
cw721-base      = { version = "1.0.0", path = "./contracts/cw721-base" }
cw1155-base     = { version = "1.0.0", path = "./contracts/cw1155-base" }

cw-storage-plus = "0.16.0"
cw-utils        = "0.16.0"
schemars        = "0.8.10"
serde           = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror       = "1.0.31"
cw-multi-test = "0.16.0"
semver = "1"

[profile.release.package.cw20-base]
codegen-units = 1
incremental = false

[profile.release.package.cw721-base]
codegen-units = 1
incremental = false

[profile.release.package.cw721-metadata-onchain]
codegen-units = 1
incremental = false

[profile.release.package.cw721-metadata-url]
codegen-units = 1
incremental = false

[profile.release.package.cw1155-base]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
